added keycloak configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,13 @@
 server.port=8080
 
-spring.security.oauth2.client.registration.github.client-id=ea6f16afc90bbc0a16ff
-spring.security.oauth2.client.registration.github.client-secret=a357361803040e48a751600bb21a7500f128a745
+#spring.security.oauth2.client.registration.github.client-id=ea6f16afc90bbc0a16ff
+#spring.security.oauth2.client.registration.github.client-secret=a357361803040e48a751600bb21a7500f128a745
+
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8180/realms/eClinical
+spring.security.oauth2.client.registration.keycloak.redirect-uri=http://localhost:8080/login/oauth2/code/toll-app
+
+spring.security.oauth2.client.registration.keycloak.client-id=toll-app
+spring.security.oauth2.client.registration.keycloak.client-secret=SJhPdMWBKMZp80jNapsaXTw9Is112sRP
+
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.keycloak.scope=profile,reader
